# PoreDLM

./: .gitignore  README.md  pyproject.toml  test.py
configs/: stage1_tokenizer.yaml  stage2_diffusion.yaml  stage3_finetune.yaml
data/: README.md
data/DNA_modifiction/without_modifiction/: shards_full.json  split_data.py
data/DNA_modifiction/without_modifiction/validation/: shards.json
docs/: architecture.md
scripts/: train_stage1_tokenizer.py  train_stage2_diffusion.py  train_stage3_finetune.py
src/poredlm/: __init__.py
src/poredlm/data/: datasets.py
src/poredlm/data/stage2_BERT_Encoder/: step01_signal_npy_to_jsol.gz.sh  step01_signal_npy_to_token_jsol.gz.py  step01_signal_npy_to_token_jsol.gz.sh  step02_split_jsol.gz.sh  step03_generate_tokenizer.py  step03_generate_tokenizer.sh  tokenizer-8k.json  vqe_tokenizer.py
src/poredlm/data/stage3_OLMo_DLM/: step01_dolma.sh
src/poredlm/models/: BERT.py  CNN.py  __init__.py  decoders.py  diffusion.py  encoder.py
src/poredlm/tasks/: __init__.py  basecalling.py  modification.py
src/poredlm/tokenization/: __init__.py  vq.py
src/poredlm/training/: __init__.py  runtime.py  set_env.sh
src/poredlm/training/stage1_tokenizer/: dataset.py  stage1_tokenizer_train.py  tokenizer_model_v0.py  tokenizer_model_v1.py  tokenizer_model_v2.py
src/poredlm/training/stage2_BERT_Encoder/: __init__.py  bert_encoder_model.py  dataset.py  stage2_bert_encoder_train.py
src/poredlm/training/stage3_DLM/: stage2_diffusion.py
src/poredlm/utils/: __init__.py  config.py  distributed.py  reproducibility.py  signal.py
(+41 files in other folders)
